--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-第一次做网页，有点小紧张。
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>唐诗一首</title>
 </head>
 <body>
 <p>今夜思<p>
